k8s-for-desktop/spring-config-server/traefik-spring-config-server-client.yml
---
kind: Service
apiVersion: v1
metadata:
  name: springconfigclient-service
spec:
  selector:
    app: springconfigclient
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springconfigclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springconfigclient
  template:
    metadata:
      labels:
        app: springconfigclient
    spec:
      containers:
      - name: springconfigclient
        image: springconfigclient:1.0
        ports:
        - name: business-port
          containerPort: 8080
