k8s-for-desktop/spring-config-server/traefik-spring-config-server-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springconfigclient-ingress
spec:
  rules:
  - host: springconfigclient.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: springconfigclient-service
          servicePort: 8080
